srvc-search/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tinyx-search
  namespace: tinyx
  labels:
    app: tinyx-search
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tinyx-search
  template:
    metadata:
      labels:
        app: tinyx-search
    spec:
      containers:
        - name: tinyx-search
          image: registry.cri.epita.fr/charles.simon-meunier/tinyx/tinyx-search:latest
          ports:
            - name: http
              containerPort: 9004
          volumeMounts:
            - mountPath: /config/
              name: application-properties
      imagePullSecrets:
        - name: tinyx-pull-secret
      volumes:
        - name: application-properties
          configMap:
            name: tinyx-search-application-properties
